Trying a new build script.