@@ -13,6 +13,12 @@ set -x
 env|sort
 pwd
 
+if [ ! -z "${EXECUTOR_NUMBER}" ]; then
+    export DISPLAY=localhost:$((1+${EXECUTOR_NUMBER}%4)).0
+fi
+
+export MAVEN_OPTS="-Xms256m -Xmx1024m -XX:MaxPermSize=512m"
+
 # Run pre-build script
 chmod +x ./pre-build.sh
 ./pre-build.sh
@@ -21,7 +27,7 @@ chmod +x ./pre-build.sh
 
 # move update site
 rm -rf $WORKSPACE/site
-SITE=/releng/org.eclipse.tigerstripe.update-site/target/site
+SITE=$WORKSPACE/releng/org.eclipse.tigerstripe.update-site/target/site
 rsync -a --delete $SITE $WORKSPACE/
 
 echo "new_build.sh done."
